<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.alex.taller1_jorge_angulo.MainActivity">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/thumbnail_height">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/descar"/>
        <RelativeLayout
            android:id="@+id/relative3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagen2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:background="@drawable/icons8_skip_to_start_64" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfil1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/imagen2"
            android:layout_margin="10dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icons8_menu_48"
            android:layout_alignParentRight="true"
            />
        </RelativeLayout>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/of"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:layout_below="@+id/text3"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>





    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="@android:dimen/notification_large_icon_width">
        <RelativeLayout
            android:layout_width="128sp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primer"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/primer1"
                android:textSize="20sp"
                android:layout_below="@+id/text4"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="128sp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segundo"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/segundo1"
                android:textSize="20sp"
                android:layout_below="@+id/text5"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="128sp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tercer"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terer1"
                android:textSize="20sp"
                android:layout_below="@+id/text6"
                android:layout_centerHorizontal="true"
                />

        </RelativeLayout>




    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>



</LinearLayout>

